# otklik

./: .gitignore  LICENSE  README.md  README.ru.md  biome.json  package.json  pnpm-lock.yaml
services/backend/: otklik-backend.spec  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 164269e26927_add_chat_messages_and_cover_letter_.py  a7f3d2c81b40_add_llm_proxy_url_to_settings.py  c1e5b8f92a04_drop_vacancy_response_link.py  e1b7c4a92f08_add_error_domain_to_applications.py
services/backend/scripts/: build_sidecar.sh  clear_tables.sh  seed_demo_db.py  sidecar_entry.py
services/backend/src/headhunter_backend/: exceptions.py
services/backend/tests/: conftest.py  test_ai.py  test_api_ai.py  test_api_application.py  test_api_applications.py  test_api_auth.py  test_api_orchestrator.py  test_api_rate_limits.py  test_api_search.py  test_api_settings.py  test_api_setup.py  test_api_system.py  test_api_vacancies.py  test_app_run.py  test_applications_summary.py  test_apply_service.py  test_auto_submit_listener.py  test_benchmark.py  test_broadcaster.py  test_browser_core.py  test_chromium_download.py  test_chromium_gate.py  test_claude_code.py  test_claude_code_gate.py  test_claude_code_integration.py  test_cloud_catalog.py  test_cors.py  test_cover_letter_service.py  test_db.py  test_db_session.py  test_deployment.py  test_deployment_secrets.py  test_hardware.py  test_hh_auth_flow.py  test_hhru_writer.py  test_letter_chat_parser.py  test_letter_chat_service.py  test_letter_pending_worker.py  test_llm_proxy.py  test_migrations.py  (+16 more)
(+379 files in other folders)
