[project]
name = "otklik-backend"
version = "0.1.0"
description = "Otklik backend — job-board automation and AI cover letters"
readme = "README.md"
authors = [
    { name = "bimba", email = "bimba@flashphoner.com" }
]
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.59.1",
    "rich>=15.0.0",
    "structlog>=25.5.0",
    "fastapi[standard]>=0.119",
    "uvicorn[standard]>=0.38",
    "selectolax>=0.4.9",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.49",
    "python-statemachine>=3.1.2",
    "litellm>=1.86.2",
    "botocore>=1.43.18",
    "psutil>=7.2.2",
    "keyring>=25.7",
]

[project.scripts]
otklik-backend = "otklik_backend.api.app:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "types-psutil>=7.2.2.20260518",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -s"
asyncio_mode = "auto"
